Changed the default for ValidateJenkinsJobXmlWellFormed to False because of XML 1.1 validation issue.

--- a/JenkinsToolsWpf/Properties/Settings.settings
+++ b/JenkinsToolsWpf/Properties/Settings.settings
@@ -75,7 +75,7 @@
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="ValidateJenkinsJobXmlWellFormed" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="JobsToMonitorJson" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
