URL delete is not complete but I'm saving the change for now. It's a good enough stopping point.

--- a/JenkinsToolsWpf/App.config
+++ b/JenkinsToolsWpf/App.config
@@ -151,6 +151,12 @@
       <setting name="DefaultToConfigurePageWhenOpeningUrl" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="SettingsWindowHeight" serializeAs="String">
+        <value>599</value>
+      </setting>
+      <setting name="SettingsWindowWidth" serializeAs="String">
+        <value>811</value>
+      </setting>
     </JenkinsToolsetWpf.Properties.Settings>
   </userSettings>
 </configuration>
