--- a/JenkinsToolsWpf/Properties/Settings.settings
+++ b/JenkinsToolsWpf/Properties/Settings.settings
@@ -131,5 +131,11 @@
     <Setting Name="DefaultToConfigurePageWhenOpeningUrl" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="SettingsWindowHeight" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">599</Value>
+    </Setting>
+    <Setting Name="SettingsWindowWidth" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">811</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
