Made the build number changeable by the build process.

--- a/JenkinsToolsWpf/App.config
+++ b/JenkinsToolsWpf/App.config
@@ -143,7 +143,7 @@
         <value>False</value>
       </setting>
       <setting name="BuildNumber" serializeAs="String">
-        <value>100</value>
+        <value>{BuildNumber}</value>
       </setting>
       <setting name="Jenkins2FlatView" serializeAs="String">
         <value>False</value>
