--- a/JenkinsToolsWpf/Properties/Settings.settings
+++ b/JenkinsToolsWpf/Properties/Settings.settings
@@ -123,7 +123,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="BuildNumber" Type="System.String" Scope="User">
-      <Value Profile="(Default)">100</Value>
+      <Value Profile="(Default)">{BuildNumber}</Value>
     </Setting>
     <Setting Name="Jenkins2FlatView" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
