--- a/JenkinsToolsWpf/packages.config
+++ b/JenkinsToolsWpf/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NetSparkle" version="1.1.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
-  <package id="WpfAnimatedGif" version="1.4.18" targetFramework="net461" />
+  <package id="Microsoft.Toolkit" version="5.1.1" targetFramework="net462" />
+  <package id="NetSparkle" version="1.1.0" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net462" />
+  <package id="WpfAnimatedGif" version="1.4.18" targetFramework="net462" />
 </packages>
