Update azure-pipelines.yml for Azure Pipelines [skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ steps:
 
 - task: ArchiveFiles@1
   inputs:
-    rootFolderOrFile: '$(Build.BinariesDirectory)' 
+    rootFolder: '$(Build.BinariesDirectory)' 
     includeRootFolder: true 
     archiveType: default
     archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip' 
