--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,11 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
+- task: CmdLine@1
+  inputs:
+     filename: echo
+     arguments: "hello world"
+
 - task: ArchiveFiles@1
   inputs:
     rootFolder: '$(Build.BinariesDirectory)' 
