--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ steps:
 - task: CmdLine@1
   inputs:
      filename: echo
-     arguments: "%Build.SourcesDirectory%"
+     arguments: '${Build.SourcesDirectory}'
 
 - task: NuGetToolInstaller@0
 
