--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
   inputs:
      scriptName: 'test script'
      scriptType: inlineScript
-     inlineScript: "Write-host ${solution}""
+     inlineScript: "Write-host ${solution}"
 
 - task: NuGetToolInstaller@0
 
@@ -37,12 +37,3 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
-
-
-- task: ArchiveFiles@1
-  inputs:
-    rootFolder: '$(Build.BinariesDirectory)' 
-    includeRootFolder: true 
-    archiveType: default
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip' 
-    replaceExistingArchive: true
