--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ variables:
 steps:
 - task: PowerShell@1
   inputs:
-     scriptName: 'test script 1'
+     scriptName: 'List env vars'
      scriptType: inlineScript
      inlineScript: "gci env:* | sort-object name"
 
