Update azure-pipelines.yml for Azure Pipelines [skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,4 +42,4 @@ steps:
   inputs:
     scriptName: 'test script 2'
     scriptType: inlineScript
-    inlineScript: "dir ${env:BUILD_SOURCESDIRECTORY} -Recurse"
+    inlineScript: "dir ${env:BUILD_BINARIESDIRECTORY} -Recurse"
