--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /JenkinsLib.Test/bin/Debug
 /.idea/.idea.jenkins-toolset
 /.vs/JenkinsToolset/v16
+/JenkinsLib.IntegTest/obj/Debug/JenkinsLib.IntegTest.csprojAssemblyReference.cache
+/JenkinsLib.IntegTest/obj/Debug/JenkinsLib.IntegTest.csproj.CoreCompileInputs.cache
