--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /JenkinsLib.Test/obj/Debug
 /JenkinsLib.Test/bin/Debug
 /.idea/.idea.jenkins-toolset
+/.vs/JenkinsToolset/v16
+/JenkinsLib.IntegTest/obj/Debug
