--- a/JenkinsToolsWpf/App.config
+++ b/JenkinsToolsWpf/App.config
@@ -1,20 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="JenkinsToolsetWpf.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+      <section name="JenkinsToolsetWpf.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="JenkinsToolsetWpf.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+      <section name="JenkinsToolsetWpf.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <system.net>
     <settings>
-      <servicePointManager expect100Continue="false"/>
+      <servicePointManager expect100Continue="false" />
     </settings>
   </system.net>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <applicationSettings>
     <JenkinsToolsetWpf.Properties.Settings>
@@ -29,13 +29,13 @@
   <userSettings>
     <JenkinsToolsetWpf.Properties.Settings>
       <setting name="DiffExePath" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="LeftJenkinsBaseUrl" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="RightJenkinsBaseUrl" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="WindowLeft" serializeAs="String">
         <value>0</value>
@@ -59,34 +59,34 @@
         <value>CenterScreen</value>
       </setting>
       <setting name="LocalTempDirectory" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="CompareToolSwitches" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="JenkinsApiCredentials" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="JenkinsJobAuthToken" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="LeftPaneFontFamily" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="RightPaneFontFamily" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="LeftPaneFontWeight" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="RightPaneFontWeight" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="LeftPaneFontStyle" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="RightPaneFontStyle" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="LeftPaneFontSize" serializeAs="String">
         <value>0</value>
@@ -98,7 +98,7 @@
         <value>False</value>
       </setting>
       <setting name="JobsToMonitorJson" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="WindowBackgroundColor" serializeAs="String">
         <value>White</value>
@@ -134,10 +134,10 @@
         <value>General</value>
       </setting>
       <setting name="LeftFilterText" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="RightFilterText" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="ClearFilterOnJobCopy" serializeAs="String">
         <value>False</value>
@@ -162,8 +162,8 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0"/>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
